--- a/templates/journal_app.html
+++ b/templates/journal_app.html
@@ -103,7 +103,7 @@
                                         <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ post.Auteur_pub.Image_profil.url }}">
                                         <div class="media-body">
                                             <h6 class="mt-1">{{ post.Auteur_pub.Nom_Complet }}
-                                                <small class="text-muted pl-2"><i class="fa fa-clock"></i>{{ post.Date_pub }}</small>
+                                                <small class="text-muted pl-2"><i class="fa fa-clock"></i>&nbsp; {{ post.Date_pub }}</small>
                                                 <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Profession }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
                                                 <br>
                                             </h6>
