--- a/templates/login_notif.html
+++ b/templates/login_notif.html
@@ -60,7 +60,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             </div>
-                            <input type="text" name="Password" class="form-control mt-0" placeholder="Mot de passe" aria-label="Password" aria-describedby="basic-addon1" required >
+                            <input type="password" name="Password" class="form-control mt-0" placeholder="Mot de passe" aria-label="Password" aria-describedby="basic-addon1" required >
                         </div>
 
                         <div class="form-group">
