--- a/templates/profil_user.html
+++ b/templates/profil_user.html
@@ -63,6 +63,14 @@
                                     <span class="none">Ressource</span>
                                 </a>
                             </li>
+                            {% if usr.Status == 'Psychologue' %}
+                            <li class="parent">
+                                <a href="/assistance" class=""><i class="fas fa-envelope mr-3"></i>
+                                    <span class="none">Messagerie</span>
+                                </a>
+                            </li>
+                            {% else %}
+                            {% endif %}
                             <li class="parent">
                                 <a href="/chat" class=""><i class="fas fa-comments mr-3"></i>
                                     <span class="none">Chat</span>
